Bug 232533  [Help] TVT34:TCT310: ELL - Truncated button in Content preferences

--- a/org.eclipse.help.ui/src/org/eclipse/help/ui/internal/Messages.properties
+++ b/org.eclipse.help.ui/src/org/eclipse/help/ui/internal/Messages.properties
@@ -192,6 +192,9 @@ AddICDialog_10=Use p&ort:
 AddICDialog_11=80
 AddICDialog_17=You must specify a Host
 AddICDialog_19=Port must be an integer between 0 and 65535
+# Since Eclipse 3.4.1 HelpContentBlock_0, HelpContentBlock_1, HelpContentBlock_2
+# HelpContentBlock_5 and HelpContentBlock_6 are no longer referenced, they
+# have been deleted for Eclipse 3.5
 HelpContentBlock_0=Disable
 HelpContentBlock_1=Disable
 HelpContentBlock_2=Enable/Disable
